# esp32-s3-audio-processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  partitions.csv  sdkconfig
doc/: defines-esp32s3.txt  defines-native.txt  filtering.odg  notes-jump.txt  notes-qt.txt  notes-tab.txt
doc/system/: simulating.pu
main/: AppSupervising.cpp  AppSupervising.h  AudioProcessing.cpp  AudioProcessing.h  CMakeLists.txt  Kconfig  LibSimd.S  main.cpp
simulation/EspVisualizing()/: help-valgrind.txt  kill.sh  massif.sh  meson.build  run.sh  val.sup  valgrind.sh
simulation/EspVisualizing()/deployment/local/: coreDebug.sh
simulation/EspVisualizing()/main/: AppSupervising.cpp  AppSupervising.h  EspSimulating.cpp  EspSimulating.h  EspVisualizing.cpp  EspVisualizing.h  SampleSending.cpp  SampleSending.h  SampleSineGenerating.cpp  SampleSineGenerating.h  SamplesSineGenerating.cpp  SamplesSineGenerating.h  SignalGenerating.cpp  SignalGenerating.h  SimUserInteracting.cpp  SimUserInteracting.h  main.cpp
